# AgenticAIBootCamp

./: .env.example  .gitignore  404.html  AGENTS.md  CONTRIBUTING.md  CURRICULUM.md  DEPLOY.md  GITHUB_PUSH.md  LICENSE  Makefile  README.md  SECURITY.md  SETUP.md  START_HERE.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml
agentic/: index.html
benchmarks/: BENCHMARK_REPORT_TEMPLATE.md  run_all.py
career/: index.html
curriculum-outline/: index.html
curriculum/week-00/: README.md  day-01-llm-basics.md  day-02-fine-tuning.md  day-03-safety.md  day-04-deployment.md  day-05-multimodal.md  day-06-ethics.md
curriculum/week-01/: README.md  day-01-pdf-fundamentals.md  (+5 more)
datasets/: README.md
deploy/: index.html
docs/: AGENTIC_AI_ENGINEERING.md  AI_ENGINEERING_PLAYBOOK.md  CAREER_PORTFOLIO.md  DOCUMENTATION_INDEX.md  GENERATIVE_AI_ENGINEERING.md  INTERVIEW_COMPANION.md  KNOWLEDGE_BASE.md  VIDEO_RESOURCES.md
documentation-index/: index.html
evaluation/: __init__.py
github-push/: index.html
handbook/: agentic.md  career.md  curriculum-outline.md  deploy.md  documentation-index.md  github-push.md  index.md  interview.md  playbook.md  setup.md  start-here.md  video-resources.md
interview/: index.html
labs/: __init__.py
playbook/: index.html
portfolio/: README.md
scripts/: create_sample_pdf.py
search/: search_index.json
setup/: index.html
src/: __init__.py
start-here/: index.html
tests/: __init__.py
video-resources/: index.html
(+142 files in other folders)
