[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ai-bootcamp"
version = "0.1.0"
description = "Advanced AI Engineering & RAG Systems Bootcamp"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "labs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
